<resources>
    <string name="app_name">Know Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="feelings">Your Feelings</string>
    <string name="menu_notification">Notifications</string>
    <string name="no_activity">No activity for this day.</string>
    <string name="timestamp">Timestamp</string>
    <string name="intensity">Intensity</string>
    <string name="notes">Notes</string>

    <!-- Notifications strings -->
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="notification_help">Set notifications to remind you to input your feelings</string>

    <!-- Feeling names -->
    <string name="HAPPY">Happy</string>
    <string name="ANGRY">Angry</string>
    <string name="SAD">Sad</string>
    <string name="ANXIOUS">Anxious</string>
    <string name="STRESSED">Stressed</string>
    <string name="EXCITED">Excited</string>
    <string name="DEPRESSED">Depressed</string>
    <string name="title_activity_day_view">DayViewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_resources">ResourcesActivity</string>
</resources>
